[gd_scene load_steps=14 format=3 uid="uid://31vsdnsofoou"]

[ext_resource type="PackedScene" uid="uid://ch0krls6y12y8" path="res://player.tscn" id="1_l1y63"]
[ext_resource type="Script" path="res://skybox.gd" id="1_pgrb5"]
[ext_resource type="PackedScene" uid="uid://bmi4yxmcc2m0d" path="res://hoverboard.tscn" id="2_sibpl"]
[ext_resource type="PackedScene" uid="uid://dlgxashpwucl5" path="res://radio.tscn" id="3_cgl1j"]
[ext_resource type="Script" path="res://wind_manager.gd" id="5_0otb4"]
[ext_resource type="Script" path="res://wind_body.gd" id="6_g1hy4"]

[sub_resource type="QuadMesh" id="QuadMesh_oy20x"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_y4tmv"]
data = PackedVector3Array(0.5, -0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yaa1h"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_d0i6j"]
sky_material = SubResource("ProceduralSkyMaterial_yaa1h")

[sub_resource type="Environment" id="Environment_uog07"]
background_mode = 2
sky = SubResource("Sky_d0i6j")
tonemap_mode = 2
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.0

[sub_resource type="PrismMesh" id="PrismMesh_i1obt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wga7v"]
points = PackedVector3Array(0, 0.5, 0.5, 0.5, -0.5, 0.5, 0, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[node name="Skybox" type="Node3D"]
script = ExtResource("1_pgrb5")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(200, 0, 0, 0, 200, 0, 0, 0, 200, 0, -0.0652623, 0)
collision_layer = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 5.96046e-08, 1, 0, -1, 5.96046e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_oy20x")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 5.96046e-08, 1, 0, -1, 5.96046e-08, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_y4tmv")

[node name="Player" parent="." instance=ExtResource("1_l1y63")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.531002, 0.454737, 1.75178)

[node name="hoverboard" parent="." instance=ExtResource("2_sibpl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1341, 5.28166, -4.62028)

[node name="radio" parent="." instance=ExtResource("3_cgl1j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.248756, 1.93474, -5.07413)

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_uog07")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WindManager" type="Node3D" parent="Environment"]
script = ExtResource("5_0otb4")

[node name="WindyBody" type="RigidBody3D" parent="."]
script = ExtResource("6_g1hy4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WindyBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.19843, 1.99198, 0)
mesh = SubResource("PrismMesh_i1obt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WindyBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.19843, 1.99198, 0)
shape = SubResource("ConvexPolygonShape3D_wga7v")

[node name="VelocityLabel3D" type="Label3D" parent="WindyBody"]
transform = Transform3D(-0.0248684, 0, -0.999691, 0, 1, 0, 0.999691, 0, -0.0248684, 3.02699, 2.6444, 0.0413471)
text = "HELLO WORLD"

[connection signal="cardinal_direction_changed" from="Environment/WindManager" to="WindyBody" method="_on_cardinal_direction_changed"]
[connection signal="gust_ended" from="Environment/WindManager" to="WindyBody" method="_on_gust_ended"]
[connection signal="gust_started" from="Environment/WindManager" to="." method="_on_wind_manager_gust_started"]
[connection signal="gust_started" from="Environment/WindManager" to="WindyBody" method="_on_gust_started"]
